update getFirestationByStationNumber